@@ -21,7 +21,7 @@ title: Changelog
 
 * The `html` field type will be **removed** in the future. Instead the `string` should be used in combination with an additional configuration property for this field in the schema.
 
-* The support for the embedded Elasticsearch will be dropped in the future. It is highly recommended to link:{{< relref "elasticsearch.asciidoc" >}}#_dedicated_elasticsearch[setup Elasticsearch as a dedicated service]. 
+* The support for the embedded Elasticsearch will be dropped in the future. It is highly recommended to link:{{< relref "elasticsearch.asciidoc" >}}#_dedicated_elasticsearch[setup Elasticsearch as a dedicated service].
 
 [[v0.28.1]]
 == 0.28.1 (TBD)
@@ -79,6 +79,8 @@ icon:check[] REST: Fixed error while fetching jobs for deleted projects.
 icon:plus[] Elasticsearch: The index sync will now automatically remove no longer used indices.
 
 icon:check[] REST: Fixed an error that can happen when creating new nodes which contain binary fields that reference a not yet stored binary sha512sum. link:https://github.com/gentics/mesh/issues/524[#524]
+
+icon:check[] Core: Fixed a bug that prevented moving a published node in one language to a published container of another language.
 
 [[v0.27.0]]
 == 0.27.0 (19.10.2018)
